# services/cell-api/internal/api/openapi_gen.json
@@ -4781,65 +4781,6 @@
         ]
       }
     },
-    "/api/v1/settings/announcements": {
-      "get": {
-        "operationId": "get_api_v1_settings_announcements",
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthenticated"
-          }
-        },
-        "summary": "List settings",
-        "tags": [
-          "settings"
-        ]
-      },
-      "post": {
-        "operationId": "post_api_v1_settings_announcements",
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthenticated"
-          }
-        },
-        "summary": "Create setting",
-        "tags": [
-          "settings"
-        ]
-      }
-    },
-    "/api/v1/settings/announcements/{id}": {
-      "delete": {
-        "operationId": "delete_api_v1_settings_announcements_id_",
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthenticated"
-          }
-        },
-        "summary": "Delete setting",
-        "tags": [
-          "settings"
-        ]
-      }
-    },
     "/api/v1/settings/auth-providers": {
       "get": {
         "operationId": "get_api_v1_settings_auth_providers",
